--- a/index.html
+++ b/index.html
@@ -6,15 +6,33 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ethan Dahl</title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="imgs/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imgs/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon/favicon-16x16.png">
+    <link rel="manifest" href="imgs/favicon/site.webmanifest">
+    <link rel="mask-icon" href="imgs/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
     <h1>Ethan Dahl</h1>
+
+    <img src="imgs/me.jpg" alt="A portrait of Kaytlynn and I.">
+
     <ul>
         <li>Traveling</li>
         <li>Dogs</li>
         <li>Beer</li>
     </ul>
+
+    <video controls>
+        <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4" type="video/mp4">
+    </video>
+
+    <script src="js/scripts.js"></script>
 </body>
 </html>
