--- a/index.html
+++ b/index.html
@@ -33,6 +33,28 @@
         <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4" type="video/mp4">
     </video>
 
+    <footer>
+        <!-- Contact form -->
+        <form name="contact" method="POST" data-netlify="true">
+            <p>
+              <label>Your Name: <input type="text" name="name" /></label>   
+            </p>
+            
+            <p>
+              <label>Your Email: <input type="email" name="email" /></label>
+            </p>
+
+            <p>
+              <label>Message: <textarea name="message"></textarea></label>
+            </p>
+
+            <p>
+              <button type="submit">Send</button>
+            </p>
+          </form>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.5.6/plyr.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
