Captcha and File input

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <p>
               <label>Your Name: <input type="text" name="name" /></label>   
             </p>
-            
+
             <p>
               <label>Your Email: <input type="email" name="email" /></label>
             </p>
@@ -47,6 +47,12 @@
             <p>
               <label>Message: <textarea name="message"></textarea></label>
             </p>
+
+            <p>
+                <input type="file" name="" id="">
+            </p>
+
+            <div data-netlify-recaptcha="true"></div>
 
             <p>
               <button type="submit">Send</button>
