--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <img src="imh/giphy.webp" alt="Dumb Cat">
+    <img src="imh/404.gif" alt="Dumb Cat">
 
 </body>
 </html>
