--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         <!-- Contact form -->
         <form name="contact" method="POST" data-netlify="true">
             <p>
-              <label>Your Name: <input type="text" name="name" /></label>   
+              <label>Your Name: <input type="text" name="name" required/></label>   
             </p>
 
             <p>
-              <label>Your Email: <input type="email" name="email" /></label>
+              <label>Your Email: <input type="email" name="email" required/></label>
             </p>
 
             <p>
-              <label>Message: <textarea name="message"></textarea></label>
+              <label>Message: <textarea name="message" required></textarea></label>
             </p>
 
             <p>
