--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <footer>
         <!-- Contact form -->
-        <form name="contact" method="POST" data-netlify="true">
+        <form name="contact" method="POST" data-netlify="true" data-netlify-recaptcha="true">
             <p>
               <label>Your Name: <input type="text" name="name" required/></label>   
             </p>
