--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </header>
 
     <section class="container">
-      <figure class="vertical"><a href=""><img src="imgs/Poster_Final.jpg" alt=""></a></figure>
-      <figure class="horizontal"><a href=""><img src="imgs/Squatch_final_v1-06.png" alt=""></a></figure>
-      <figure class="big"><a href=""><img src="imgs/Fire Challenge Coin Mockup_v2.png" alt=""></a></figure>
-      <figure class="vertical"><a href=""><img src="imgs/mailer mockup.png" alt=""></a></figure>
+      <figure class="poster"><a href=""><img src="imgs/Poster_Final.jpg" alt=""></a></figure>
+      <figure><a href=""><img src="imgs/Squatch_final_v1-06.png" alt=""></a></figure>
+      <figure><a href=""><img src="imgs/Fire Challenge Coin Mockup_v2.png" alt=""></a></figure>
+      <figure class="mailer"><a href=""><img src="imgs/mailer mockup.png" alt=""></a></figure>
     </section>
 
     <aside>
